# network_experiments

./: .gitignore  flash_over_tftp.sh  flash_over_tftp.txt  howto_zynq_image.txt  i2c_manual.txt  xsdk.sh
TCPtest/: Makefile  client.cpp  client_socket.cpp  server.cpp  server_socket.cpp
UDPtest/: Makefile  client.cpp  server.cpp
memory_allocator/: Makefile  demo_driver.c  memory_allocator.c  reload_module.sh  simple_char_device.c
meta-visensor/conf/: layer.conf
meta-visensor/recipes-visensor/visensor-mod/: Makefile  reload_module.sh  visensor_0.1.bb
meta-visensor/recipes-visensor/visensor-mod/files/: Makefile  visensor.c
slam_sensor_server/: CMakeLists.txt
slam_sensor_server/include/: FPGAConfig.h  FPGA_config.h  shared_memory_manager.hpp  udp_server.hpp
slam_sensor_server/src/: FPGAConfig.cpp  FPGA_config.cpp  main.cpp  shared_memory_manager.cpp  tcp_server.cpp
test_client/: Makefile  client.cpp
xilinx/: xilinx.dts
xilinx/UDPserver/: udp_server.c
xilinx/test2/src/: main.cc
xilinx/visensor-srv/: copy-to-zynq.sh
xilinx/visensor-srv/src/: ConfigServer.cpp  ConfigServer.hpp  DevMem.cpp  DevMem.h  FPGARegisters.cpp  FPGARegisters.hpp  FPGA_config.cpp  FPGA_config.hpp  I2CBus.cpp  I2CBus.h  I2CBusRaw.cpp  I2CBusRaw.h  MT9V034.cpp  MT9V034.hpp  Sensor.cpp  Sensor.hpp  SharedRingBuffer.cpp  SharedRingBuffer.hpp  i2c-dev.h  i2cbusses.c  main.cpp  ring_buffer.cpp  ring_buffer.hpp  shared_memory.cpp  shared_memory.hpp  shared_memory_manager.cpp  shared_memory_manager.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
